--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <li>Deploy to staging server on every push to master.</li>
               <li>Deploy to production on every tag.</li>
             </ul>
-            <p>Built-in protection from spam (and Adam)!</p>
+            <p>Built-in protection from spam (and Adam)!<br><span style="font-size: 75%; padding-left: 2em;">Remember the plugins site?</span></p>
           </section>
         </div>
 
@@ -638,6 +638,31 @@ jquery::siteupdater::site{ "contribute.jquery.org": }
               <li>uploads a build to <a href="https://github.com/jquery/testswarm">testswarm</a></li>
               <li>spawn workers on browserstack - <a href="https://github.com/clarkbox/testswarm-browserstack">testswarm-browserstack</a></li>
               <li>More Information on <a href="https://github.com/jquery/testswarm/wiki/Automated-Distributed-Continuous-Integration-for-JavaScript">github jquery/testswarm wiki</a></li>
+            </ul>
+          </section>
+        </div>
+
+        <div class="slide">
+          <header>
+            <h1>Plugins Site</h1>
+          </header>
+          <section class="text">
+            <ul>
+              <li>Mixture of grunt-jquery-content and node-wordpress:
+                <ul>
+                  <li>grunt-jquery-content for docs pages</li>
+                  <li>node-wordpress for individual plugin pages</li>
+                </ul>
+              </li>
+              <li>node HTTP server listening for post-recieve hooks <span style="font-size: 75%;">(not node-git-notifier)</span></li>
+              <li>New publishing model to avoid spam and increase quality:
+                <ul>
+                  <li>GitHub</li>
+                  <li>Licensing</li>
+                  <li>Tags &amp; Semantic Versioning</li>
+                </ul>
+              </li>
+              <li>SQLite as the canonical plugin registry</li>
             </ul>
           </section>
         </div>
