Fixed some typos

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ client.newPost({
             <ul>
               <li>Custom XML-RPC method for arbitrary uploads.</li>
               <li>Bypass standard security checks.</li>
-              <li>Completely free form directory of resources with explicity filenames.</li>
+              <li>Completely free form directory of resources with explicit filenames.</li>
             </ul>
           </section>
         </div>
@@ -488,12 +488,12 @@ client.newPost({
             <h1>Adding Markdown Support</h1>
           </header>
           <section class="text">
-            <p>The last step in this process is to get from markdown to the final HTML. To do that, we use marked and highlight-js. We also add support for YAML metadata, which we use on the jQuery Learning Center.</p>
+            <p>The last step in this process is to get from markdown to the final HTML. To do that, we use <a href="https://npmjs.org/package/marked">marked</a> and <a href="https://npmjs.org/package/highlight.js">highlight.js</a>. We also add support for YAML metadata, which we use on the jQuery Learning Center.</p>
             <p>All that and more:</p>
             <ul>
               <li>TOC generation from content headings</li>
               <li>API site generation from XML</li>
-              <li>Placeholder/snippet support</li>
+              <li>Placeholder/partial support</li>
             </ul>
             <p>If you want to manage a WordPress site via markdown, <a href="https://github.com/jquery/grunt-jquery-content">grunt-jquery-content</a> is the library for you! <span style="font-size: 60%;">(Hey! That's us!)</span></p>
           </section>
